--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,32 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+
+    <!-- web services -->
+
+    <display-name>FourSchlag WebService</display-name>
+    <servlet>
+        <servlet-name>fourschlag-servlet</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer
+        </servlet-class>
+
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>
+                fourschlag.services.web.ws.ForecastWS;com.fasterxml.jackson.jaxrs
+            </param-value>
+        </init-param>
+
+        <init-param>
+            <param-name>jersey.config.disableMoxyJson.server</param-name>
+            <param-value>true</param-value>
+        </init-param>
+
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>fourschlag-servlet</servlet-name>
+        <url-pattern>/fourschlag/*</url-pattern>
+    </servlet-mapping>
+
 </web-app>
