--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>groupId</groupId>
     <artifactId>fourschlag</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
+        <finalName>${project.artifactId}##${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
