commented out web.xml content to make it work with wildfly as well

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,8 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-
-    <!-- web services -->
+<!-- if commented it does _not_ work with wildfly
 
     <display-name>FourSchlag WebService</display-name>
     <servlet>
@@ -30,5 +29,5 @@
         <servlet-name>fourschlag-servlet</servlet-name>
         <url-pattern>/fourschlag/*</url-pattern>
     </servlet-mapping>
-
+-->
 </web-app>
