--- a/importer/config.json
+++ b/importer/config.json
@@ -1,4 +1,7 @@
 {
+  "cqlsh_binary": "/usr/local/bin/cqlsh",
+  "available_params": "ORG_STRUCTURE, REGIONS, EXCHANGE_RATE, ACTUAL_SALES, FORECAST_SALES, ACTUAL_FIXED_COSTS, FORECAST_FIXED_COSTS",
+  "replication_param":"WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 3 }",
   "table_params": {
     "ORG_STRUCTURE": "bu, sbu, product_main_group",
     "REGIONS": "region, subregion",
@@ -16,8 +19,5 @@
     "FORECAST_SALES": "(SALES_VOLUMES double, NET_SALES double, CM1 double, PRODUCT_MAIN_GROUP varchar, REGION varchar, SALES_TYPE varchar,  PERIOD int, PERIOD_YEAR int, PERIOD_MONTH int, CURRENCY varchar, USERID varchar, ENTRY_TS varchar, TOPDOWN_ADJUST_SALES_VOLUMES double, TOPDOWN_ADJUST_NET_SALES double, TOPDOWN_ADJUST_CM1 double, PLAN_PERIOD int, PLAN_MONTH int, PLAN_YEAR int, PLAN_HALF_YEAR int, PLAN_QUARTER int, STATUS varchar, USERCOMMENT text, ENTRY_TYPE varchar, PRIMARY KEY ((PRODUCT_MAIN_GROUP, REGION), PERIOD, SALES_TYPE, PLAN_PERIOD, ENTRY_TYPE))",
     "ACTUAL_FIXED_COSTS": "(FIX_PRE_MAN_COST double, SHIP_COST double, SELL_COST double, DIFF_ACT_PRE_MAN_COST double, IDLE_EQUIP_COST double, RD_COST double, ADMIN_COST_BU double, ADMIN_COST_OD double, OTHER_OP_COST_BU double, OTHER_OP_COST_OD double, SPEC_ITEMS double, PROVISIONS double, CURRENCY_GAINS double, VAL_ADJUST_INVENTORIES double, OTHER_FIX_COST double, DEPRECIATION double, CAP_COST double, SBU varchar, REGION varchar, SUBREGION varchar, PERIOD int, PERIOD_YEAR int, PERIOD_HALF_YEAR int, PERIOD_QUARTER int, PERIOD_MONTH int, CURRENCY varchar, USERID varchar, ENTRY_TS varchar, ADMIN_COST_COMPANY double, OTHER_OP_COST_COMPANY double, EQUITY_INCOME double, PRIMARY KEY ((SBU, SUBREGION), PERIOD))",
     "FORECAST_FIXED_COSTS": "(FIX_PRE_MAN_COST double, SHIP_COST double, SELL_COST double, DIFF_ACT_PRE_MAN_COST double, IDLE_EQUIP_COST double, RD_COST double, ADMIN_COST_BU double, ADMIN_COST_OD double, OTHER_OP_COST_BU double, OTHER_OP_COST_OD double, SPEC_ITEMS double, PROVISIONS double, CURRENCY_GAINS double, VAL_ADJUST_INVENTORIES double, OTHER_FIX_COST double, TOPDOWN_ADJUST_FIX_COSTS double, DEPRECIATION double, CAP_COST double, SBU varchar, REGION varchar, SUBREGION varchar, ENTRY_TYPE varchar, PERIOD int, PERIOD_YEAR int, PERIOD_MONTH int, PLAN_PERIOD int, PLAN_YEAR int, PLAN_HALF_YEAR int, PLAN_QUARTER int, PLAN_MONTH int, CURRENCY varchar, STATUS varchar, USERCOMMENT text, USERID varchar, ENTRY_TS varchar, ADMIN_COST_COMPANY double, OTHER_OP_COST_COMPANY double, EQUITY_INCOME double, PRIMARY KEY((SBU, SUBREGION), PERIOD, ENTRY_TYPE, PLAN_PERIOD))"
-  },
-  "cqlsh_binary": "/usr/local/bin/cqlsh",
-  "available_params": "ORG_STRUCTURE, REGIONS, EXCHANGE_RATE, ACTUAL_SALES, FORECAST_SALES, ACTUAL_FIXED_COSTS, FORECAST_FIXED_COSTS"
-
+  }
 }
