--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,26 @@
             <artifactId>cassandra-driver-mapping</artifactId>
             <version>3.1.2</version>
         </dependency>
+
+        <!-- MySQL -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.5.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <version>3.5.6-Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.1.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
