--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <version>1.0.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.5</version>
+        </dependency>
+
     </dependencies>
 
 </project>
