Added remaining Entities and Accessors. Refactoring of Request Classes not finished yet

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <version>6.0.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.2.5.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
