--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>groupId</groupId>
     <artifactId>fourschlag</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.3.1</version>
 
     <build>
         <finalName>${project.artifactId}##${project.version}</finalName>
